welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:3: error: not found: value iqualOk
	if (iqualOk) {
            ^inOrderEqual:4: error: type mismatch;
 found   : Unit
 required: Boolean
		rep = ( ( a <= b ) && ( b <= c ) )
                    ^inOrderEqual:6: error: type mismatch;
 found   : Unit
 required: Boolean
		rep = rep = ( ( a < b ) && ( b < c ) )
                          ^inOrderEqual:6: error: type mismatch;
 found   : Unit
 required: Boolean
		rep = rep = ( ( a < b ) && ( b < c ) )
                    ^