welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.code
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {
	var rep = false
	if (iqualOk) {
		rep = ( ( a <= b ) && ( b <= c ) )
	} else { 
		rep = rep = ( ( a < b ) && ( b < c ) )
	}
}
